--- a/index.html
+++ b/index.html
@@ -6,32 +6,41 @@
 		<link rel="stylesheet" href="css/ui-lightness/jquery-ui-1.8.8.custom.css" type="text/css" media="screen" charset="utf-8"/>
 		<script type="text/javascript" src="js/jquery.js"></script>
 		<script type="text/javascript" src="js/jquery.ui.custom.js"></script>
+		<script type="text/javascript" src="js/date.js"></script>
 		<script type="text/javascript" src="js/site.js"></script>
 	</head>
 	<body>
-		<form id="bar">
-			<div id="ui-widget">
-				<div class="box">
-					<label for="time">Time:</label>
-					<input id="time" type="text" value="10:00 p.m."/>
-				</div>
-				<div class="box">
-					<label for="in">Where:</label>
-					<input id="in" type="text" value=""/>
-				</div>
-				<div class="box">
-					<label for="from">Relative to:</label>
-					<input id="from" type="text" value=""/>
-				</div>
-				<div id="misc">
-					<h2>Display:</h2>
-					<input type="checkbox" id="ampm"/><label for="ampm">Use am/pm?</label>
-				</div>
+		<div id="header">
+			<div class="wrapper">
+				<h1>timecrow</h1>
+				<form id="bar">
+					<div id="ui-widget">
+						<div class="box">
+							<label for="time">Time/Date:</label>
+							<input id="time" type="text" value=""/>
+						</div>
+						<div class="box">
+							<label for="in">In:</label>
+							<input id="in" type="text" value=""/>
+						</div>
+						<div class="box">
+							<label for="from">Where are you?</label>
+							<input id="from" type="text" value=""/>
+						</div>
+						<div style="clear:both;"></div>
+						<div id="misc">
+							<h2>Display:</h2>
+							<input type="checkbox" id="ampm"/><label for="ampm">Use 24-hour clock?</label>
+						</div>
+					</div>
+				</form>
 			</div>
-		</form>
-		
-		<div id="results">
-			<h2 id="from-time"><span>Local</span> time is... <strong></strong></h2>
+		</div>
+		<div class="wrapper">
+			<div id="results">
+				<div id="in-time">In <span>local time</span>: <strong></strong></div>
+				<div id="from-time">In <span>local time</span>: <strong></strong></div>
+			</div>
 		</div>
 	</body>
 </html>
